--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "contract-management",
-  "version": "1.1.2",
-  "description": "Persoenliches Vertragsmanagement",
+  "version": "1.1.3",
+  "description": "Persönliches Vertragsmanagement",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
