--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contract-management",
-  "version": "1.2.0",
+  "version": "1.2.0a",
   "description": "Persönliches Vertragsmanagement",
   "main": "server.js",
   "scripts": {
